003-traffic-in-out-mesh/start/age-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sentences
    mode: age
    version: v1
  name: age-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentences
      mode: age
      version: v1
  template:
    metadata:
      labels:
        app: sentences
        mode: age
        version: v1
    spec:
      containers:
      - image: michaelvl/sentences:v1
        name: age
        ports:
          - containerPort: 5000
