003-traffic-in-out-mesh/start/api-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sentences
    mode: api
    version: v1
  name: api-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentences
      mode: api
      version: v1
  template:
    metadata:
      labels:
        app: sentences
        mode: api
        version: v1
    spec:
      containers:
      - image: praqma/istio-sentences:v1
        imagePullPolicy: Always
        name: api
        ports:
          - containerPort: 5000
