003-traffic-in-out-mesh/start/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
    mode: api
  name: api
spec:
  ports:
  - port: 5000
    name: http-api
    protocol: TCP
    targetPort: 5000
    appProtocol: http
  selector:
    app: api
    mode: api
  type: ClusterIP
