003-traffic-in-out-mesh/start/sentences-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sentences
    mode: sentence
  name: sentences
spec:
  ports:
  - port: 5000
    name: http-sentences
    protocol: TCP
    targetPort: 5000
    appProtocol: http
  selector:
    app: sentences
    mode: sentence
  type: ClusterIP
