003-traffic-in-out-mesh/start/name-destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: name-destination-rule
spec:
  host: name
  subsets:
  - name: name-v1
    labels:
      version: v1
